<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/help_button"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/help_icon"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/action_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="18dp">

        <RadioButton
            android:id="@+id/no_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_no_click"
            android:textSize="18sp"
            android:layoutDirection="rtl"/>
        <RadioButton
            android:id="@+id/view_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_view_click"
            android:textSize="18sp"
            android:layoutDirection="rtl"/>
        <RadioButton
            android:id="@+id/screen_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_screen_click"
            android:textSize="18sp"
            android:layoutDirection="rtl"/>
    </RadioGroup>

</LinearLayout>