<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionSettingActivity">

    <RadioGroup
        android:id="@+id/action_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/no_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/action_no_click"
            android:textSize="18sp"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/view_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/action_view_click"
            android:textSize="18sp"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/screen_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/action_screen_click"
            android:textSize="18sp"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/custom_click_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/custom_screen_click"
            android:textSize="18sp"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>

    <TextView
        android:id="@+id/action_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_rg"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:padding="18dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_description">
        <TextView
            android:id="@+id/x_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X:"
            android:textSize="22sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/x_dis_tv"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/x_dis_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="bottom"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/x_tv"
            app:layout_constraintEnd_toStartOf="@id/y_tv"/>
        <TextView
            android:id="@+id/y_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Y:"
            android:textSize="22sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@id/y_dis_tv"
            app:layout_constraintStart_toEndOf="@id/x_dis_tv"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/y_dis_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="bottom"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/y_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/delay_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="2"
            android:text="延时："
            android:textSize="22sp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/x_tv"
            app:layout_constraintEnd_toStartOf="@id/delay_et"/>
        <EditText
            android:id="@+id/delay_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@id/delay_tv"
            app:layout_constraintTop_toTopOf="@id/delay_tv"
            app:layout_constraintEnd_toStartOf="@id/delay_unit"/>
        <TextView
            android:id="@+id/delay_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:text="ms"
            android:textSize="22sp"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="@id/delay_tv"
            app:layout_constraintStart_toEndOf="@id/delay_et"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="保存"
            android:textSize="22sp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delay_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>